--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,26 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: Utrecht Brazilian Zouk
+email: LisaDeniseDance@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+# twitter_username: jekyllrb
+# github_username:  jekyll
+# dribbble_username: jekyll
+facebook_username: UtrechtBrazilianZouk
+# flickr_username: jekyll
+# instagram_username: jekyll
+# linkedin_username: jekyll
+# pinterest_username: jekyll
+# youtube_username: jekyll
+# telegram_username: jekyll
+# googleplus_username: +jekyll
+# microdotblog_username: jekyll
+
+youtube_channel: UCfuE88y0kQQkYwLPhtBAPIw
+youtube_channel_name: Lisa
 
 # Build settings
 markdown: kramdown
@@ -41,3 +51,8 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+show_excerpts: true
+
+header_pages:
+  - about.md
+  - portfolio.md
