--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Utrecht Brazilian Zouk
 email: LisaDeniseDance@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://utrechtzouk.nl" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 # github_username:  jekyll
 # dribbble_username: jekyll
