--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Utrecht Brazilian Zouk
-email: LisaDeniseDance@gmail.com
+email: utrechtzouk@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://utrechtzouk.nl" # the base hostname & protocol for your site, e.g. http://example.com
