Enable google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ facebook_username: UtrechtBrazilianZouk
 # telegram_username: jekyll
 # googleplus_username: +jekyll
 # microdotblog_username: jekyll
+google_analytics: UA-165860378-1
 
 youtube_channel: UCfuE88y0kQQkYwLPhtBAPIw
 youtube_channel_name: Lisa
