Add Online Classes tab

--- a/_config.yml
+++ b/_config.yml
@@ -57,6 +57,7 @@ plugins:
 show_excerpts: true
 
 header_pages:
+  - online-classes.md
   - wednesday-classes.md
   - friday-classes.md
   - calendar.md
