Enable instagram social link

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ url: "http://utrechtzouk.nl" # the base hostname & protocol for your site, e.g. 
 # dribbble_username: jekyll
 facebook_username: UtrechtBrazilianZouk
 # flickr_username: jekyll
-# instagram_username: jekyll
+instagram_username: UtrechtZouk
 # linkedin_username: jekyll
 # pinterest_username: jekyll
 # youtube_username: jekyll
